fixed the navbar and some spacing

--- a/newsstyle.css
+++ b/newsstyle.css
@@ -3,6 +3,10 @@ head {
   text-align: center;
 }
 
+.topnav a.active {
+  background-color: #00ace6;
+  color: white;
+}
 .sidenav {
   background-color: transparent;
 }
@@ -17,25 +21,27 @@ head {
   left: 0;
   margin-left: 10px;
   margin-top: 70px;
-  background-color: #b3ffff;
+  background-color: #012E57;
   overflow-x: hidden;
   padding-top: 25px;
   padding-right: 10px;
   padding-bottom: 25px;
-  border: 2px ridge ;
-  border-radius: 25px;
+  border: 3px ridge ;
+  border-radius: 15px;
   }
 
   .sidenav a {
    padding: 20px;
    text-decoration: none;
-   font-size: 12px;
+   font-size: 15px;
+   text-shadow: 1px 1px #00d2ff;
    display: block;
+   color: #d7fffa;
   }
 
   .sidenav a: hover {
     background-color: #b3f0ff;
-    color: white;
+    color: 	#00b8ff
   }
 
   .sidenav a.active {
@@ -55,30 +61,32 @@ head {
 }
 
 .topnav{
-  background-color: #b3ffff;
+  background-color: #012E57;
   font-size: 20px;
-  text-align: center;
+  text-align: left;
   top: 0;
   left: 0;
   padding: 5px;
   padding-left: 20px;
   position: fixed;
-  width: 1300px
+  width: 100%;
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
   float: center;
-  color: #008080;
+  color: #d7fffa;
   padding: 10px 70px;
   text-decoration: none;
+  text-shadow: 1px 1px #00d2ff;
   font-size: 25px;
 }
 /* Change the color of links on hover */
 .topnav a:hover {
   background-color: #b3f0ff;
-  color: white;
+  color: 	#1406FE
 }
+
 
 body {
   /* and background colors */
@@ -109,15 +117,13 @@ h3 {
   text-align: center;
   font-size: 100px;
   color: white;
-  margin-left: 430px;
-  margin-right: 430px;
   margin-top: 50px;
 }
 
 #lefttext {
   text-align: left;
   line-height: 2.0;
-  font-size: 15px;
+  font-size: 10px;
   border-radius: 10;
   margin-top: 20;
   float: left;
@@ -128,7 +134,7 @@ h3 {
 #lefttext2 {
   text-align: left;
   line-height: 2.0;
-  font-size: 15px;
+  font-size: 10px;
   border-radius: 10;
   margin-top: 20;
   float: left;
@@ -139,7 +145,7 @@ h3 {
 #righttext {
   text-align: left;
   line-height: 2.0;
-  font-size: 15px;
+  font-size: 10px;
   border-radius: 10;
   float: left;
   color: white;
@@ -148,7 +154,7 @@ h3 {
 #righttext2 {
   text-align: left;
   line-height: 2.0;
-  font-size: 13px;
+  font-size: 10px;
   border-radius: 10;
   float: left;
   color: white;
